2020-09-29  Aakash Jain  <aakash_jain@apple.com>

        Limit maximum number of webkitpy failures to display
        https://bugs.webkit.org/show_bug.cgi?id=217087

        Reviewed by Jonathan Bedard.

        * BuildSlaveSupport/ews-build/steps.py:
        (WebKitPyTest):
        (WebKitPyTest.getResultSummary):
        * BuildSlaveSupport/ews-build/steps_unittest.py:
        (test_lot_of_failures): Added unit-tests.

2020-09-29  Aakash Jain  <aakash_jain@apple.com>

        [build.webkit.org] Add unit-test to detect invalid triggers in config.json
        https://bugs.webkit.org/show_bug.cgi?id=216898

        Reviewed by Jonathan Bedard.

        * BuildSlaveSupport/build.webkit.org-config/loadConfig_unittest.py: Added.
        (ConfigDotJSONTest):
        (ConfigDotJSONTest.get_config):
        (ConfigDotJSONTest.test_builder_keys):
        (ConfigDotJSONTest.test_multiple_scheduers_for_builder):
        (ConfigDotJSONTest.test_schduler_contains_valid_builder_name):
        (ConfigDotJSONTest.test_single_builder_for_triggerable_scheduler):

2020-09-28  Jonathan Bedard  <jbedard@apple.com>

        [webkitpy] Use webkitcorepy's auto installer for pycodestyle (Follow-up fix)
        https://bugs.webkit.org/show_bug.cgi?id=215427
        <rdar://problem/66931291>

        Unreviewed follow-up fix.

        Conflict resolution at some point broke the original change.

        * Scripts/webkitpy/style/checkers/python.py: Import directly from pycodestyle.
        * Scripts/webkitpy/thirdparty/__init__.py:
        (AutoinstallImportHook._install_pycodestyle): Deleted.

2020-09-28  Mark Lam  <mark.lam@apple.com>

        Add Bounds Check Elimination validation for debugging.
        https://bugs.webkit.org/show_bug.cgi?id=217055
        rdar://69122891

        Reviewed by Keith Miller.

        Added --validateBCE=true to ftl-no-cjit-validate-sampling-profiler
        and ftl-eager-no-cjit.

        * Scripts/run-jsc-stress-tests:
